WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133349
[iOS] REGRESSION (
r168388
): DidNotHandleTapAsClick not sent when commitPotentialTap() fails
https://bugs.webkit.org/show_bug.cgi?id=133349
Summary
[iOS] REGRESSION (r168388): DidNotHandleTapAsClick not sent when commitPotent...
Andy Estes
Reported
2014-05-28 09:54:37 PDT
[iOS] REGRESSION (
r168388
): DidNotHandleTapAsClick not sent when commitPotentialTap() fails
Attachments
Patch
(3.09 KB, patch)
2014-05-28 09:57 PDT
,
Andy Estes
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2014-05-28 09:57:15 PDT
Created
attachment 232205
[details]
Patch
Andy Estes
Comment 2
2014-05-28 09:57:30 PDT
<
rdar://problem/15260214
>
Andy Estes
Comment 3
2014-05-28 11:08:47 PDT
Committed
r169426
: <
http://trac.webkit.org/changeset/169426
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug