[iOS] REGRESSION (r168388): DidNotHandleTapAsClick not sent when commitPotentialTap() fails https://bugs.webkit.org/show_bug.cgi?id=133349

Reviewed by Benjamin Poulain.

WebPage::commitPotentialTap() fails when a recognized single tap cannot be sent as a synthetic click event.
We should send WebPageProxy::DidNotHandleTapAsClick in these cases.

* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::commitPotentialTap):
(WebKit::WebPage::commitPotentialTapFailed):

Canonical link: https://commits.webkit.org/151377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169426 268f45cc-cd09-0410-ab3c-d52691b4dbfc