Source/WebKit2/WebProcess/WebPage/WebPage.h
@@ -462,6 +462,7 @@ public:
     void handleTap(const WebCore::IntPoint&);
     void potentialTapAtPosition(uint64_t requestID, const WebCore::FloatPoint&);
     void commitPotentialTap();
+    void commitPotentialTapFailed();
     void cancelPotentialTap();
     void tapHighlightAtPosition(uint64_t requestID, const WebCore::FloatPoint&);
 
